# Michaels_pp

./: CMakeLists.txt  notes
Mastik-main/demo/: L3-scan.c
Mastik-main/src/: l3.c
PrimeProbe/: CMakeLists.txt  main.c  shared.c  shared.h
receiver/: CMakeLists.txt  main.c  prepare_receiver.c  prepare_receiver.h  training.c  training.h
sender/: CMakeLists.txt  correlated_set.c  correlated_set.h  main.c
